@@ -1,29 +1,5 @@
-
-local-WWW:
-
-ifneq ($(strip $(depth)),.)
-WWW: local-WWW
-	$(LOOP)
-
-WWW-clean: local-WWW-clean
-	$(LOOP)
-endif
-
-#ugh, this is (but whole make web/www/WWW is) lilypond specific
-local-web:
-	$(MAKE) out=www local-WWW
-
 web:
 	$(MAKE) out=www WWW
-
-local-WWW-clean:
-	rm -f $(outdir)/*
-
-local-web-clean:
-	$(MAKE) out=www local-WWW-clean
-
-web-clean:
-	$(MAKE) out=www WWW-clean
 
 local-help: www-targets-help
 
